--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es6",
+    "module": "commonjs",
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "allowUnusedLabels": false,
